Converted Arrays.asList to List.of