@@ -1,8 +1,8 @@
 package org.joseki.http;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+
 import com.bbn.parliament.jena.util.JsonLdRdfWriter;
 
 public class ResponseHttpInitializer {
@@ -12,7 +12,7 @@ public class ResponseHttpInitializer {
 
 	public static void fixupHttpAcceptTypes() {
 		List<String> mimeTypes = new ArrayList<>();
-		mimeTypes.addAll(Arrays.asList(ResponseHttp.x));
+		mimeTypes.addAll(List.of(ResponseHttp.x));
 		mimeTypes.add(JsonLdRdfWriter.contentType);
 		String[] mimeTypesArray = mimeTypes.toArray(new String[mimeTypes.size()]);
 		ResponseHttp.prefContentType = new AcceptList(mimeTypesArray);
