@@ -1,7 +1,6 @@
 package com.bbn.parliament.jena.graph.index.spatial.standard;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -28,7 +27,7 @@ public class StandardRecordFactory implements GeometryRecordFactory {
 
 	private Graph graph;
 	private Map<Node, String> nodesToProcess;
-	private List<String> validTypes = Arrays.asList(StdConstants.VALID_TYPES);
+	private List<String> validTypes = List.of(StdConstants.VALID_TYPES);
 
 	public StandardRecordFactory(Graph graph) {
 		this.graph = graph;
